--- a/FermaOnline/Views/Experiment/Create.cshtml
+++ b/FermaOnline/Views/Experiment/Create.cshtml
@@ -1,8 +1,9 @@
-﻿@model Experiment
+﻿@model FermaOnline.Models.Experiment
 
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
+        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Add experiment</h2>
         </div>
@@ -13,24 +14,28 @@
                     <div class="col-4">
                         <label asp-for="Name"></label>
                         <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="ShortDescription"></label> <br />
                         <textarea class="form-control" asp-for="ShortDescription" rows="3"></textarea>
+                        <span asp-validation-for="ShortDescription" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Description"></label> <br />
                         <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="CageNumber"></label> <br />
                         <input class="form-control" asp-for="CageNumber"> </input>
+                        <span asp-validation-for="CageNumber" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -45,6 +50,7 @@
                         <input type="radio" asp-for="Species" value="Pig" />Pig<br />
                         <input type="radio" asp-for="Species" value="Poultry" />Poultry<br />
                         <input type="radio" asp-for="Species" value="Ruminants" />Ruminants<br />
+                        <span asp-validation-for="Species" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
