--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -4,6 +4,7 @@
 <form method="post" asp-action="Update">
     <input asp-for="Id" hidden />
     <div class="border p-3">
+        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Update experiment</h2>
         </div>
@@ -23,16 +24,19 @@
                 <div class="form-group row">
                     <div class="col-4">
                         <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="col-4 form-check form-switch">
                         <input class="form-check-input" type="checkbox" asp-for="Status" />
                     </div>
                     <div class="col-4">
                         <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="col-4">
                         <label class="form-label" for="postedFiles">Short description</label>
                         <textarea class="form-control" asp-for="ShortDescription" rows="3"></textarea>
+                        <span asp-validation-for="ShortDescription" class="text-danger"></span>
                     </div>
                     <div class="form-group row">
                         <div class="col-4">
