--- a/FermaOnline/Views/Experiment/Create.cshtml
+++ b/FermaOnline/Views/Experiment/Create.cshtml
@@ -30,13 +30,16 @@
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="CageNumber"></label> <br />
-                        <input class="form-control" asp-for="CageNumber"> </input>
+                        <input class="form-control" asp-for="CageNumber">  
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label class="form-label" for="postedFiles">Upload image </label>
-                        <input class="form-control" type="file" id="fileSelect" name="postedFiles" multiple />
+                        <form method="post" enctype="multipart/form-data">
+                            <input type="file" name="files" multiple required />
+                            <!-- <input type="hidden" name="experimentId" value=@Model . Id />-->
+                            <button type="submit" class="btn btn-primary" asp-controller="File" asp-action="UploadToFileSystem">Upload </button>
+                        </form>
                     </div>
                 </div>
                 <div class="form-group row">
