--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -34,10 +34,14 @@
                         <label class="form-label" for="postedFiles">Short description</label>
                         <textarea class="form-control" asp-for="ShortDescription" rows="3"></textarea>
                     </div>
+
                     <div class="form-group row">
                         <div class="col-4">
-                            <label class="form-label" for="postedFiles">Upload image </label>
-                            <input type="file" name="postedFiles" class="form-control" multiple />
+                            <form method="post" enctype="multipart/form-data">
+                                <input type="file" name="files" multiple required />
+                                <input name="experimentId" value="Id" hidden />
+                                <button type="submit" class="btn btn-primary" asp-controller="File" asp-action="UploadToFileSystem">Upload to File System</button>
+                            </form>
                         </div>
                     </div>
                 </div>
