--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -1,47 +1,38 @@
-﻿@model Experiment
+﻿ 
 
 
 <form method="post" asp-action="Update">
-    <input asp-for="Id" hidden />
+    <input name="id" hidden />
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Update experiment</h2>
         </div>
         <div class="row">
             <div class="col-12">
+      
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Name"></label>
+                        <label class="form-label" for="name">Name</label>
+                        <input name="name"value="@ViewBag.Name" class="form-control" />
                     </div>
-                    <div class="col-4">
-                        <label asp-for="Status"></label>
-                    </div>
-                    <div class="col-4">
-                        <label asp-for="Description"></label>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-4">
-                        <input asp-for="Name" class="form-control" />
-                    </div>
+
                     <div class="col-4 form-check form-switch">
-                        <input class="form-check-input" type="checkbox" asp-for="Status" />
+                        <input class="form-check-input" type="checkbox" value="@ViewBag.Status" name="status" />
                     </div>
                     <div class="col-4">
-                        <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+                        <label class="form-label" for="description">Description</label>
+                        <textarea class="form-control" name="description" value="@ViewBag.Description" rows="3"> </textarea>
                     </div>
                     <div class="col-4">
-                        <label class="form-label" for="postedFiles">Short description</label>
-                        <textarea class="form-control" asp-for="ShortDescription" rows="3"></textarea>
+                        <label class="form-label" for="shortDescription">Short description</label>
+                        <textarea class="form-control" name="shortDescription" value="@ViewBag.ShortDescription" rows="3"></textarea>
                     </div>
 
                     <div class="form-group row">
                         <div class="col-4">
-                            <form method="post" enctype="multipart/form-data">
-                                <input type="file" name="files" multiple required />
-                                <input name="experimentId" value="Id" hidden />
-                                <button type="submit" class="btn btn-primary" asp-controller="File" asp-action="UploadToFileSystem">Upload to File System</button>
-                            </form>
+                            <label class="form-label " for="files">Files</label>
+                            <input type="file" class="form-control"  name="files" multiple  />
+
                         </div>
                     </div>
                 </div>
