--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -1,37 +1,39 @@
-﻿ 
+﻿@model Experiment
 
 
-<form method="post" asp-action="Update">
-    <input name="id" hidden />
+<form method="post" enctype="multipart/form-data" asp-action="Update">
+    <input asp-for="Id" hidden />
     <div class="border p-3">
+        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Update experiment</h2>
         </div>
         <div class="row">
             <div class="col-12">
-      
                 <div class="form-group row">
                     <div class="col-4">
-                        <label class="form-label" for="name">Name</label>
-                        <input name="name"value="@ViewBag.Name" class="form-control" />
+                        <label asp-for="Name"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
-
                     <div class="col-4 form-check form-switch">
-                        <input class="form-check-input" type="checkbox" value="@ViewBag.Status" name="status" />
+                        <label asp-for="Status"></label>
+                        <input class="form-check-input" type="checkbox" asp-for="Status" />
                     </div>
                     <div class="col-4">
-                        <label class="form-label" for="description">Description</label>
-                        <textarea class="form-control" name="description" value="@ViewBag.Description" rows="3"> </textarea>
+                        <label asp-for="Description"></label>
+                        <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="col-4">
-                        <label class="form-label" for="shortDescription">Short description</label>
-                        <textarea class="form-control" name="shortDescription" value="@ViewBag.ShortDescription" rows="3"></textarea>
+                        <label class="form-label" for="postedFiles">Short description</label>
+                        <textarea class="form-control" asp-for="ShortDescription" rows="3"></textarea>
+                        <span asp-validation-for="ShortDescription" class="text-danger"></span>
                     </div>
-
                     <div class="form-group row">
                         <div class="col-4">
                             <label class="form-label " for="files">Files</label>
-                            <input type="file" class="form-control"  name="files" multiple  />
+                            <input type="file" name="files" multiple />
                         </div>
                     </div>
                 </div>
