--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -21,8 +21,7 @@
                         <div class="form-group ">
                             <div class="col-4">
                                 <label asp-for="Status"></label>
-                                <input type="checkbox" asp-for="Status" checked data-toggle="toggle" data-on="Active" data-off="Ended" name="fileType" data-onstyle="success" data-offstyle="warning">
-                            </div>
+                                <input type="checkbox" asp-for="Status" data-toggle="toggle">                       </div>
                         </div>
                         <div class="form-group ">
                             <div class="col-4">
@@ -48,7 +47,7 @@
                     <div class="form-group row">
                         <div class="col-4">
                             <label for="fileType">File type:</label>
-                            <input type="checkbox" checked data-toggle="toggle" data-on="Materials" data-off="Formula" name="fileType" data-onstyle="info" data-offstyle="secondary">
+                            <input type="checkbox" name="fileType" checked data-toggle="toggle" data-on="Materials" data-off="Formula"  data-onstyle="info" data-offstyle="secondary">
                         </div>
                     </div>
                     <div class="form-group row">
