--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -21,7 +21,8 @@
                         <div class="form-group ">
                             <div class="col-4">
                                 <label asp-for="Status"></label>
-                                <input type="checkbox" asp-for="Status" data-toggle="toggle">                       </div>
+                                <input  asp-for="Status" data-toggle="toggle">
+                            </div>
                         </div>
                         <div class="form-group ">
                             <div class="col-4">
@@ -47,7 +48,7 @@
                     <div class="form-group row">
                         <div class="col-4">
                             <label for="fileType">File type:</label>
-                            <input type="checkbox" name="fileType" checked data-toggle="toggle" data-on="Materials" data-off="Formula"  data-onstyle="info" data-offstyle="secondary">
+                            <input type="checkbox" name="fileType"  data-toggle="toggle" data-on="Materials" data-off="Formula"  data-onstyle="info" data-offstyle="secondary">
                         </div>
                     </div>
                     <div class="form-group row">
