--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -10,7 +10,7 @@
 
         <div class="row center">
             <div class="col-8">
-                <p>Add data in time order</p>
+                <p>Add data in time order @ViewBag.CageNumber</p>
                 <div class="mb-3 row">
                     <label asp-for="SurveyDate"></label>
                     <div class="col-sm-10">
